@@ -39,15 +39,16 @@ def New_Graph():
 ## Add a trace to the graph
 #  \param handle - the integer handle for the graph to add the trace to
 #  \param rank - the rank of the task associated with the trace
+#  \param tid - the thread ID of the task associated with the trace
 #  \param trace - the stack trace (list of string frames) with the earliest frame (i.e., _start or main) first
 #  \return 0 on success
-def Add_Trace(handle, rank, trace):
+def Add_Trace(handle, rank, tid, trace):
     trace_string = ''
     count = len(trace)
     # convert the list of frames to a string of frames separated by newlines
     for frame in trace:
         trace_string += frame + '\n'
-    return _STATmerge.Add_Trace(handle, rank, count, trace_string)
+    return _STATmerge.Add_Trace(handle, rank, tid, count, trace_string)
 
 
 ## Merge a graph to the graph
